Fix even spacing tea flex

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -113,10 +113,11 @@ h4 {
   /* width: 100%; */
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
 }
-.items {
+.items:not(:last-child) {
   margin-bottom: 30px;
+  margin-right: 30px;
 }
 
 .items span {
